--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ img{
   justify-content: space-between;
   align-items: center;
 }
+
+.navbar .main-menu ul{
+  display: flex;
+
+}
+
+.navbar ul li a{
+  padding: 10px 20px;
+  display: block;
+  font-weight: 600;
+  transition: 05.s;
+}
 /* Utility Classes */
 .container{
   max-width: 1100px;
