--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+:root{
+  --primary-color:#4891ff;
+}
+
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
@@ -46,6 +50,10 @@ img{
   display: block;
   font-weight: 600;
   transition: 05.s;
+}
+
+.navbar ul li a:hover{
+  color: var(--primary-color);
 }
 /* Utility Classes */
 .container{
