--- a/style.css
+++ b/style.css
@@ -65,6 +65,18 @@ img{
 .navbar ul li:last-child a{
   margin-left: 10px;
 }
+
+/* Hero*/
+.hero{
+  margin-bottom: 50px;
+}
+
+.hero .container{
+  background: url(/images/hero-bg.png) no-repeat;
+  background-size: contain;
+  background-position: center bottom;
+  height: 550px;
+}
 /* Utility Classes */
 .container{
   max-width: 1100px;
